# FPGA

./: CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: __init__.py  analysis.py  board.py  designer.py  sim.py  synth.py
ci/: self_hosted_setup.md  setup_runner.sh
common/: __init__.py  config.py  logging.py  notify.py  resources.py
configs/: variants.yaml
constraints/: icebreaker.pcf
docs/: architecture.md  build.md  cli_reference.md  cocotb_integration.md  configuration.md  contributing.md  crewai.md  fixed_point.md  hw_spec.md  logging_config.md  reference_fir.md  simulation.md  static_analysis.md  synthesis.md  testing.md  troubleshooting.md  windtunnel.md
formal/: fir8.sby  fir8_formal.v
orchestrator/: __init__.py  crew.py
scripts/: check_imports.py  convert_variants_schema.py  local_dry_run.sh  mk_phase1_report.py  parse_nextpnr_report.py
sim/cocotb/: Makefile  test_fir8.py
sim/golden/: fir_model.py
src/rtl/: fir8.v  fir8_top.v
synth/ice40/: icestorm_pack.sh  nextpnr_ice40.sh  yosys_ice40.ys
tests/acceptance/: test_gates.py
